syntax = "proto3";
package agent_service;

message GenericMetricValue {
  oneof value_type {
    double double_value = 1;
    int64 int64_value = 2;
    string string_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
  }
}

message GenericMetric {
  string name = 1;
  int64 timestamp_unix_ms = 2;
  GenericMetricValue value = 3;
  map<string, string> tags = 4;
}

message GenericMetricsBatch {
  repeated GenericMetric metrics = 1;
}